--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.33.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.8",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -30,6 +35,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "react-is": "18.3.1",
     "uploadthing": "^7.7.4"
   },
   "devDependencies": {
@@ -41,5 +47,8 @@
     "eslint-config-next": "15.5.4",
     "prisma": "^6.17.1",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "react-is": "^18.3.1"
   }
 }
