--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dnd-kit": "^0.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
