--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
+    "postinstall": "prisma generate",
     "test": "jest",
     "test:watch": "jest --watch"
   },
