--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test": "jest",
     "test:watch": "jest --watch"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@clerk/nextjs": "^6.33.3",
     "@dnd-kit/core": "^6.3.1",
