--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "test": "jest",
     "test:watch": "jest --watch"
   },
+   "prisma": {
+    "schema": "prisma/schema/",
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@clerk/nextjs": "^6.33.3",
     "@dnd-kit/core": "^6.3.1",
@@ -21,7 +25,7 @@
     "@fontsource/roboto": "^5.2.8",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
-    "@prisma/client": "^7.0.0",
+    "@prisma/client": "^6.17.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -54,12 +58,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
-    "prisma": "^7.0.0",
+    "prisma": "^6.17.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   },
