--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest",
     "test:watch": "jest --watch"
   },
-   "prisma": {
+  "prisma": {
     "schema": "prisma/schema/",
     "seed": "ts-node prisma/seed.ts"
   },
@@ -46,6 +46,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-is": "18.3.1",
+    "styled-components": "^6.1.19",
     "uploadthing": "^7.7.4"
   },
   "devDependencies": {
