--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.33.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.8",
-    "@mui/icons-material": "^7.3.4",
-    "@mui/material": "^7.3.4",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
     "@prisma/client": "^6.17.1",
     "@uploadthing/react": "^7.3.3",
     "class-variance-authority": "^0.7.1",
