--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "@prisma/client": "^6.17.1",
+    "@tailwindcss/postcss": "^4.1.18",
     "@uploadthing/react": "^7.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,12 +32,14 @@
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-grid-layout": "^1.5.2",
     "react-hot-toast": "^2.6.0",
     "react-is": "18.3.1",
     "styled-components": "^6.1.19",
+    "tailwindcss": "^4.1.18",
     "uploadthing": "^7.7.4"
   },
   "devDependencies": {
